[gd_scene load_steps=3 format=3 uid="uid://cjhhteu7522lx"]

[ext_resource type="Script" path="res://prog52a.gd" id="1_dt155"]

[sub_resource type="LabelSettings" id="LabelSettings_d3jv6"]
line_spacing = 2.195
font_size = 101

[node name="prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dt155")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 354.0
offset_bottom = 160.0
text = "Length:
"
label_settings = SubResource("LabelSettings_d3jv6")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 133.0
offset_right = 357.0
offset_bottom = 293.0
text = "Width:"
label_settings = SubResource("LabelSettings_d3jv6")

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 257.0
offset_right = 801.0
offset_bottom = 497.0
label_settings = SubResource("LabelSettings_d3jv6")

[node name="calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 529.0
offset_right = 376.0
offset_bottom = 635.0
text = "Calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 411.0
offset_top = 524.0
offset_right = 775.0
offset_bottom = 635.0
text = "Clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 520.0
offset_right = 1136.0
offset_bottom = 643.0
text = "exit"

[node name="txtlen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 41.0
offset_right = 728.0
offset_bottom = 119.0

[node name="txtwid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 165.0
offset_right = 721.0
offset_bottom = 243.0

[connection signal="pressed" from="calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
